# PTPdComparation

./: README.md
client/: CMakeLists.txt  schedAux.h  udpClientNonblock.cpp
client/gpioLib/: CMakeLists.txt  SimpleGPIO.cpp  SimpleGPIO.h
server/: Makefile  server.out  udpServer.cpp
